--- a/app/src/main/res/values/strings_notranslate.xml
+++ b/app/src/main/res/values/strings_notranslate.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">Call Recorder</string>
+    <string name="app_name" translatable="false">Auto Call Recorder</string>
 </resources>
